# ncc-fullstack_Stacks-Supabase

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: agents.py  crews.py  tasks.py  tools.py
src/prompts/: contract_prompts.py  frontend_prompts.py  test_prompts.py
src/utils/: clarity_helpers.py  crew.py  frontend_helpers.py
tests/: test_contract_generation.py
tipbot/logs/: generation_log.txt
